# fspy

./: .gitignore  .gitmodules  Cargo.toml  build.rs  hello  hello.c  hello.js  hello.mjs  mise.toml  node_spawn.mjs  preload.c  rust-toolchain.toml  s.sh  trap.c  x.js  x.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: bench.yml  test.yml
artifacts/: Cargo.toml
artifacts/.cargo/: config.toml
artifacts/linux_execve_host/: Cargo.toml  aarch64-unknown-linux-musl.json  build.rs  rust-toolchain.toml
artifacts/linux_execve_host/.cargo/: config.toml
artifacts/linux_execve_host/src/: abort.rs  bootstrap.rs  client.rs  consts.rs  env.rs  exec.rs  hashbang.rs  lib.rs  main.rs  nul.rs  reflect_sys.rs  signal.rs
crates/fspy/: Cargo.toml
crates/fspy/src/: arena.rs  cmd_convert.rs  command.rs  lib.rs
crates/fspy/src/linux/: mod.rs
crates/fspy/src/linux/syscall_handler/: mod.rs
crates/fspy/src/unix/: mod.rs
crates/fspy/tests/: node_fs.rs  rust_std.rs  rust_tokio.rs  test_utils.rs
crates/fspy_e2e/: Cargo.toml
crates/fspy_e2e/src/: main.rs
crates/fspy_preload_unix/: Cargo.toml
crates/fspy_preload_unix/src/: lib.rs
crates/fspy_preload_unix/src/client/: convert.rs  mod.rs  raw_cmd.rs  raw_exec.rs
crates/fspy_preload_unix/src/interceptions/: dirent.rs  open.rs  stat.rs
crates/fspy_preload_unix/src/interceptions/spawn/: exec.rs  posix_spawn.rs
crates/fspy_preload_unix/src/interceptions/spawn/exec/: mod.rs  with_argv.rs
crates/fspy_preload_unix/src/macros/: linux.rs  mod.rs
crates/fspy_preload_windows/src/windows/: mod.rs  winapi_utils.rs
crates/fspy_preload_windows/src/windows/detours/: fileapi.rs  mod.rs  nt.rs
crates/fspy_shared/src/: lib.rs
crates/fspy_shared/src/ipc/: mod.rs  native_str.rs
crates/fspy_shared/src/linux/: mod.rs
crates/fspy_shared/src/macos/: mod.rs
crates/fspy_shared/src/unix/: mod.rs  shebang.rs
crates/fspy_shared/src/unix/cmdinfo/: mod.rs  raw.rs
crates/fspy_shared_unix/: Cargo.toml
crates/fspy_shared_unix/src/: lib.rs  open_exec.rs  payload.rs  shebang.rs
crates/fspy_shared_unix/src/cmdinfo/: mod.rs  raw.rs
crates/fspy_shared_unix/src/exec/: mod.rs  sys.rs  which.rs
crates/fspy_shared_unix/src/fs/: mod.rs  real.rs
crates/fspy_shared_unix/src/spawn/: elf.rs  mod.rs
crates/fspy_shared_unix/src/spawn/linux/: elf.rs
crates/seccomp_unotify/: Cargo.toml
crates/seccomp_unotify/src/: lib.rs  target.rs
crates/seccomp_unotify/src/payload/: filter.rs  mod.rs
crates/seccomp_unotify/src/supervisor/: mod.rs
crates/seccomp_unotify/tests/: arg_types.rs
examples/: argv.rs  cli.rs  cli_win.rs  debug.rs  fsacc.rs  pair.rs  syscall.rs
interpose/: Cargo.toml  rust-toolchain.toml
interpose/.cargo/: config.toml
interpose/execve/: Cargo.toml  build.rs
interpose/execve/src/: lib.rs
interpose/execve/tests/: test.rs
interpose/shared/: Cargo.toml
interpose/shared/src/: lib.rs
interpose/shared/src/ipc/: mod.rs  native_str.rs
interpose/shared/src/linux/: inject.rs  mod.rs  nul_term.rs
interpose/shared/src/macos/: inject.rs  mod.rs
interpose/shared/src/unix/: cmdinfo.rs  env.rs  mod.rs  shebang.rs
interpose/shared/src/windows/: mod.rs
interpose/src/: consts.rs  lib.rs  main.rs  shebang.rs
interpose/src/linux/: alloc.rs  bootstrap.rs  client.rs  exec.rs  global_alloc.rs  handler.rs  lib.rs  mod.rs  path.rs  signal.rs
interpose/src/macos/: client.rs  command.rs  mod.rs  program.rs
interpose/src/unix/: mod.rs
interpose/src/unix/interpose/: linux.rs
interpose/src/windows/: client.rs  detour.rs  mod.rs  winapi_utils.rs
interpose/src/windows/detours/: create_process.rs  fileapi.rs  mod.rs  nt.rs
preload_cdylib/: Cargo.toml
preload_cdylib/.cargo/: config.toml
seccomp_unotify/: Cargo.toml
seccomp_unotify/src/: lib.rs
seccomp_unotify/src/bindings/: alloc.rs  listener.rs  mod.rs
seccomp_unotify/src/handler/: arg.rs  mod.rs
seccomp_unotify/src/supervisor/: mod.rs
seccomp_unotify/tests/: arg_types.rs
src/: arena.rs  command.rs  consts.rs  fixture.rs  lib.rs  linux.rs  shebang.rs
src/linux/: consts.rs  mod.rs
src/linux/seccomp/: mod.rs
src/linux/seccomp/bindings/: listener.rs
src/linux/seccomp/handler/: arg.rs  mod.rs
src/linux/syscall_handler/: mod.rs
src/linux/syscall_handlers/: mod.rs
src/macos/: command.rs  coreutils.rs  fixtures.rs  mod.rs
src/unix/: mod.rs
src/windows/: mod.rs
