[package]
name = "fspy"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.1"
bincode = "2.0.1"
bytemuck = "1.23.0"
cfg-if = "1.0.0"
derive-where = "1.4.0"
event_iterator = "0.2.2"
futures-util = "0.3.31"
libc = "0.2.171"
linux-raw-sys = { version = "0.9.4", features = ["ptrace"] }
ref-cast = "1.0.24"
tempfile = "3.19.1"
# async-send-fd = { version = "1.2.0", features = ["tokio"] }
# passfd = "0.1.6"
tokio = { version = "1.44.2", features = ["net", "process", "io-util", "sync"]}
which = "7.0.3"
fspy_shared = { path = "interpose/shared" }

[target.'cfg(target_os = "linux")'.dependencies]
tokio-seqpacket = "0.8.0"

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
allocator-api2 = { version = "0.2.21", default-features = false, features = ["alloc"]}
nix = { version = "0.30.1", features =  ["fs", "process", "socket", "feature"] }
asyncfd = "0.1.2"

[target.'cfg(target_os = "macos")'.dependencies]
phf = { version = "0.11.3", features = ["macros"] }
bumpalo = { version = "3.17.0", features = ["allocator-api2"] }
# const_format = { version = "0.2.34", features = ["fmt"] }

[target.'cfg(target_os = "windows")'.dependencies]
ms-detours = "4.0.5"
winsafe = { version = "0.0.24", features = ["kernel"] }
windows-sys = { version = "0.59.0", features = ["Win32_System_Threading"] }

[target.'cfg(target_os = "macos")'.dev-dependencies]
tempfile = "3.19.1"

[dev-dependencies]
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros", "fs", "io-std"] }
csv-async = { version = "1.3.1", features = ["tokio"] }

[build-dependencies]
attohttpc = "0.29.2"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
flate2 = "1.1.1"
tar = "0.4.44"
anyhow = "1.0.98"
bytemuck = { version = "1.23.0", features = ["extern_crate_alloc"] }

# [profile.release]
# lto = true
# codegen-units = 1
