[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
debug = false
panic = "abort"

[workspace.dependencies]
fspy_shared = { path = "crates/fspy_shared" }
seccomp_unotify = { path = "crates/seccomp_unotify" }
fspy_preload_unix = { path = "crates/fspy_preload_unix", artifact = "cdylib" }
