[package]
name = "fspy_interpose"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[target.'cfg(target_os = "linux")'.dependencies]
arrayvec = "0.7.6"
lexical-core = { version = "1.0.5", default-features = false, features = ["parse-integers" ]}
linux-raw-sys = "0.9.4"
nix = { version = "0.29.0", features = ["signal"] }
seccompiler = "0.5.0"
socket2 = "0.5.9"
userland-execve = "0.2.0"


[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
libc = "0.2.172"
allocator-api2 = { version = "0.2.21", default-features = false, features = ["alloc"]}

[target.'cfg(target_os = "macos")'.dependencies]
phf = { version = "0.11.3", features = ["macros"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
strip = "symbols"
lto = true
codegen-units = 1


