[package]
name = "fspy_interpose"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[target.'cfg(target_os = "linux")'.dependencies]
arrayvec = "0.7.6"
linux-raw-sys = "0.9.4"
nix = { version = "0.30.1", features = ["signal", "fs"] }
seccompiler = "0.5.0"
userland-execve = "0.2.0"


[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
libc = "0.2.172"
allocator-api2 = { version = "0.2.21", default-features = false, features = ["alloc"]}
lexical-core = { version = "1.0.5", default-features = false, features = ["parse-integers" ]}
bstr = { version = "1.12.0", default-features = false }
socket2 = "0.5.10"

[target.'cfg(target_os = "macos")'.dependencies]
phf = { version = "0.11.3", features = ["macros"] }
nix = { version = "0.30.1", features = ["fs"] }
bumpalo = { version = "3.17.0", features = ["allocator-api2"] }
va_list = "0.2.0"
smallvec = { version = "1.15.0", features = [ "write" ] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
strip = "symbols"
lto = true
codegen-units = 1

[dependencies]
arrayvec = "0.7.6"
bincode = "2.0.1"
which = "7.0.3"


