[package]
name = "linux_execve_host"
edition = "2024"

[dependencies]
argv = "0.1.12"
arrayvec = "0.7.6"
lexical-core = { version = "1.0.5", default-features = false, features = ["parse-integers" ]}
libc = "0.2.172"
linux-raw-sys = "0.9.4"
nix = { version = "0.29.0", features = ["signal"] }
seccompiler = "0.5.0"
socket2 = "0.5.9"
userland-execve = "0.2.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
strip = "symbols" # keep it lean as we need to exec it for every child process
lto = true
codegen-units = 1
