[package]
name = "fspy_preload_unix"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[target.'cfg(target_os = "linux")'.dependencies]
arrayvec = "0.7.6"
syscalls = { version = "0.6.18", default-features = false }
nix = { version = "0.30.1", features = ["signal", "fs", "socket"] }
seccomp_unotify = { workspace = true, features = ["target"] }
libc-print = "0.1.23"
refcell-lock-api = "0.1.0"
talc = { version = "4.4.3", default-features = false, features = [
    "lock_api",
    "allocator-api2",
] }
spin = { version = "0.10.0", default-features = false, features = [
    "lock_api",
    "spin_mutex",
] }
allocator-api2 = { version = "0.2.21", default-features = false, features = [
    "alloc",
    "std",
] }
const_format = "0.2.34"

[target.'cfg(unix)'.dependencies]
libc = "0.2.172"
bstr = { version = "1.12.0", default-features = false }
socket2 = "0.5.10"
ctor = "0.4.2"
thread_local = "1.1.9"

[target.'cfg(target_os = "macos")'.dependencies]
phf = { version = "0.11.3", features = ["macros"] }
nix = { version = "0.30.1", features = ["fs"] }
bumpalo = { version = "3.17.0", features = ["allocator-api2"] }
smallvec = { version = "2.0.0-alpha.11", features = ["std"] }
passfd = { git = "https://github.com/polachok/passfd", rev = "d55881752c16aced1a49a75f9c428d38d3767213" }
allocator-api2 = { version = "0.2.21", default-features = false, features = [
    "alloc",
] }


[dependencies]
arrayvec = "0.7.6"
bincode = "2.0.1"
bytemuck = { version = "1.23.0", features = ["extern_crate_alloc"] }
derive-where = "1.4.0"
path-dedot = "3.1.1"
ref-cast = "1.0.24"
which = "7.0.3"
fspy_shared = { workspace = true }
