[package]
name = "fspy_shared_unix"
version = "0.0.0"
edition.workspace = true
publish = false

[dependencies]
allocator-api2 = { version = "0.2.21" }
nix = "0.30.1"
libc = "0.2.174"
base64 = { version = "0.22.1" }
derive-where = "1.4.0"
bincode = "2.0.1"
bstr = "1.12.0"
anyhow = "1.0.98"

[target.'cfg(target_os = "linux")'.dependencies]
seccomp_unotify = { workspace = true, features = ["target"] }
goblin = { version = "0.10.0", default-features = false, features = ["elf64", "elf32", "endian_fd", "std"] }
memmap2 = "0.9.7"
