[package]
name = "fspy_shared"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
bincode = "2.0.1"
bstr = "1.12.0"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["std"] }
ms-detours = "4.0.5"
bytemuck = { version = "1.23.0", features = ["must_cast", "extern_crate_alloc"] }
winsafe = { version = "0.0.24", features = ["kernel"] }
